// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Address /> should not render if no address is passed in 1`] = `""`;

exports[`<Address /> should render as expected 1`] = `
<div
  className={
    Object {
      "data-css-1npkmgj": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    <Translate
      className=""
      params={
        Object {
          "city": "Testcity",
          "postalCode": "12345",
          "region": "TX",
          "street": "Test Street 123",
          "street3": "",
        }
      }
      role={null}
      string="product.location.address"
    />
  </div>
</div>
`;

exports[`<Address /> should render more streets if necessary 1`] = `
<div
  className={
    Object {
      "data-css-1npkmgj": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    <div
      data-test-id="street2"
    >
      Some additional street info
    </div>
    <Translate
      className=""
      params={
        Object {
          "city": "Testcity",
          "postalCode": "12345",
          "region": "TX",
          "street": "Test Street 123",
          "street2": "Some additional street info",
          "street3": "",
        }
      }
      role={null}
      string="product.location.address"
    />
  </div>
</div>
`;
